--- a/04_presentation/_slides/index.html
+++ b/04_presentation/_slides/index.html
@@ -1187,7 +1187,7 @@ plt.savefig('images/normal_sigma.png', bbox_inches='tight')
         shuffle: false,
 
         // Turns fragments on and off globally
-        fragments: true,
+        fragments: false,
 
         // Flags whether to include the current fragment in the URL,
         // so that reloading brings you to the same fragment position
