--- a/03_location_dispersion/_slides/index.html
+++ b/03_location_dispersion/_slides/index.html
@@ -1066,14 +1066,14 @@ Var(X) = \sigma^2 = \frac{1}{n}\sum_{i=1}^n\big(x_i-\bar{x}\big)^2
 </ul>
 <!-- <div class="vspace-small"></div> -->
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:55%;">
 <div class="fragment">
 <p><img data-src="images/variance_schaefer.png" class="hcenter-image"></p>
 </div>
-</div><!-- Begin second column --><div class="column" style="width:40%;">
+</div><!-- Begin second column --><div class="column" style="width:45%;">
 <div class="fragment">
 <p><span class="math display">\[
-\begin{aligned} \sigma^2 &amp;= 0{,}25+2{,}25+0{,}25+2{,}25 \\ &amp;= 5 \end{aligned}
+\begin{aligned} \sigma^2 &amp;= \frac{1}{4}\left(0{,}25+2{,}25+0{,}25+2{,}25\right) \\ &amp;= \frac{1}{4}\cdot5=1{,}25 \end{aligned}
 \]</span></p>
 </div>
 </div>
