--- a/06_regression/_slides/index.html
+++ b/06_regression/_slides/index.html
@@ -1314,7 +1314,7 @@ plt.savefig('images/paradoxia_slope_paradoxiker.png', bbox_inches='tight')
         shuffle: false,
 
         // Turns fragments on and off globally
-        fragments: false,
+        fragments: true,
 
         // Flags whether to include the current fragment in the URL,
         // so that reloading brings you to the same fragment position
