--- a/06_regression/_slides/index.html
+++ b/06_regression/_slides/index.html
@@ -475,8 +475,8 @@ Die erste Frage an Sie als Task Force lautet: welche Möglichkeiten von Ursache 
 <li class="fragment">Dem Wortsinn nach ist Ziel der <span style=" color: navy !important;"><strong>Regression</strong></span> eine abhängige Variable auf eine oder mehrere unabhängige Variablen zurückzuführen (auf diese zu <em>regredieren</em>)</li>
 <li class="fragment">Eingängiger ist aber die umgekehrte Formulierung: Ziel der Regression ist es, auf Basis der unabhängigen Variablen die eine abhängige Variable <strong>vorherzusagen</strong> oder <strong>zu erklären</strong>
 <ul>
-<li class="fragment"><strong>Unabhängige Variable(n) = vorher<em>gesagte</em> oder erklär<em>te</em> Variable(n)</strong> (“<strong>U</strong>rsache”)</li>
-<li class="fragment"><strong>Abhängige Variable = vorher<em>sagende</em> oder erklär<em>ende</em> Variable</strong> (“<strong>A</strong>uswirkung”)</li>
+<li class="fragment"><strong>Unabhängige Variable(n) = vorher<em>sagende</em> oder erklär<em>ende</em> Variable(n)</strong> (“<strong>U</strong>rsache”)</li>
+<li class="fragment"><strong>Abhängige Variable = vorher<em>gesagte</em> oder erklär<em>ete</em> Variable</strong> (“<strong>A</strong>uswirkung”)</li>
 </ul></li>
 </ul>
 <div class="fragment">
@@ -680,12 +680,14 @@ SQT = \sum\left(y_i-\bar{y}\right)^2
 <!--- New slide --->
 <!----------------->
 </section>
-<section class="slide level2">
+<section class="slide level2 nonincremental">
 <h2>Bestimmtheitsmaß</h2>
+<div>
 <ul>
-<li class="fragment">Das <span style=" color: navy !important;"><strong>Bestimmtheitsmaß</strong></span> <span class="math inline">\(R^2\)</span> gibt an, wie gut die Datenpunkte durch die Regressionsgerade gefittet werden (“Anpassungsgüte”)</li>
-<li class="fragment">Es gibt an, welcher Anteil der Datenvarianz <span class="math inline">\(Var(Y)\)</span> durch die Varianz der Vorhersage <span class="math inline">\(Var(\hat{Y})\)</span> erklärt wird..</li>
+<li>Das <span style=" color: navy !important;"><strong>Bestimmtheitsmaß</strong></span> <span class="math inline">\(R^2\)</span> gibt an, wie gut die Datenpunkte durch die Regressionsgerade gefittet werden (“Anpassungsgüte”)</li>
+<li>Es gibt an, welcher Anteil der Datenvarianz <span class="math inline">\(Var(Y)\)</span> durch die Varianz der Vorhersage <span class="math inline">\(Var(\hat{Y})\)</span> erklärt wird..</li>
 </ul>
+</div>
 <div class="fragment">
 <p><span class="math display">\[
 R^2 = \frac{Var(\hat{Y})}{Var(Y)} = \frac{\sum\left(\hat{y_i}-\bar{y}\right)^2}{\sum\left(y_i-\bar{y}\right)^2} = \frac{SQE}{SQT}
@@ -1368,7 +1370,7 @@ plt.savefig('images/paradoxia_slope_paradoxiker.png', bbox_inches='tight')
         shuffle: false,
 
         // Turns fragments on and off globally
-        fragments: true,
+        fragments: false,
 
         // Flags whether to include the current fragment in the URL,
         // so that reloading brings you to the same fragment position
